tests/ui/parser/parser-recovery-2.stderr
error: mismatched closing delimiter: `)`
  --> $DIR/parser-recovery-2.rs:4:14
   |
LL |     fn bar() {
   |              ^ unclosed delimiter
LL |         let x = foo();
LL |     )
   |     ^ mismatched closing delimiter

error: aborting due to 1 previous error

